[tool.poetry]
name = "asteroids"
version = "0.1.0"
description = ""
authors = ["Ross Perry <perryr16@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
pytest-vcr = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
