[tool.poetry]
name = "asteroids"
version = "0.1.0"
description = ""
authors = ["Ross Perry <perryr16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.7"
pytest = "^6.2.2"
pytest-vcr = "^1.0.2"
vcrpy = "^4.1.1"
requests = "^2.25.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
